kubernetes/lookit/base/google-cloud-storage/google-storage-external-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: google-storage
spec:
  type: ExternalName
  externalName: storage.googleapis.com
