kubernetes/lookit/base/google-cloud-storage/proxy-gcs-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: proxy-gcs-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: $(CLUSTER_ISSUER)
    nginx.ingress.kubernetes.io/rewrite-target: "/lookit-$(ENVIRONMENT)/$1/$3"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/upstream-vhost: "storage.googleapis.com"
spec:
  rules:
    - host: $(SITE_DOMAIN)
      http:
        paths:
          - path: /(media|static)(/|$)(.*)
            # path: /(media|static)/(.*)
            backend:
              serviceName: google-storage
              servicePort: 443
    - host: $(SECONDARY_DOMAIN)
      http:
        paths:
          - path: /(media|static)(/|$)(.*)
            backend:
              serviceName: google-storage
              servicePort: 443
  tls:
    - hosts:
      - $(SITE_DOMAIN)
      - $(SECONDARY_DOMAIN)
      secretName: lookit-cert
